--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -58,8 +58,6 @@ label {
 
 .form-control {
     background: rgba(255, 255, 255, 0.5);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
 }
 
 .fade {
@@ -78,4 +76,9 @@ label {
 
 .alert {
     border-radius: 0;
+}
+
+.progress {
+    height: 30px;
+    border-radius: 10px;
 }
