--- a/src/views/components/navbar.pug
+++ b/src/views/components/navbar.pug
@@ -20,4 +20,4 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
                 a.nav-link(href='/' class=`${nav == "Home" ? "active" : ""}`) Home
                 a.nav-link(href='/app/dashboard' class=`${nav == "Dashboard" ? "active" : ""}`) Dashboard
                 a.nav-link(href='/app/themes' class=`${nav == "Themes" ? "active" : ""}`) Themes
-                a.nav-link(href='#' class=`${nav == "Free Stuff" ? "active" : ""}`) Free Stuff
+                a.nav-link(href='/app/help' class=`${nav == "Help" ? "active" : ""}`) Help
