--- a/src/views/help-pages/login-signup.pug
+++ b/src/views/help-pages/login-signup.pug
@@ -1,17 +1,27 @@
-.row
+.row.mb-4
     .col-12
         :markdown-it
-            ## Access the Account Page
+            # Access the Account Page
 
             To `login` or `signup`, you will first need to access the accounts page by doing the following:
             
-            1. Click **Home**
-            2. Click **Get Started**
-            3. You will be presented with the account page
+            1. Click **Home**  
+            ![The home button in the navigation bar](/images/help-pages/navbar-go-home.png)
+            2. Click **Get Started**  
+            ![The get started button on the landing page](/images/help-pages/get-started-button.png)
+            3. You will be presented with the account page  
+            ![The accounts page](/images/help-pages/accounts-page.png)
 
             [You can alternatively click here](/app/account)
-.row
-    .col-12.col-md-6
+.row.mt-4
+    .col-12.col-md-6.pr-md-4
+        :markdown-it
+            ## Login
+
+            On the left hand side of your screen, you will see the login form. Enter your **email** and **password** to login.
+
+            > Passwords are case-sensitive
+    .col-12.col-md-6.pl-md-4
         :markdown-it
             ## Signup
 
@@ -20,14 +30,3 @@
             -   Name (First & Last)
             -   Email
             -   Password (+ Confirmation)
-    .col-12.col-md-6
-        :markdown-it
-            ## Login
-
-            On the left hand side of your screen, you will see the login form. Enter your **email** and **password** to login.
-
-            > Passwords are case-sensitive
-
-
-
-        
