--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400&display=swap");
-
 *::selection {
     background: var(--bs-teal);
 }
@@ -8,11 +6,20 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: Quicksand, "Avenir Next", Sawasdee, Helvetica, sans-serif;
+    font-family: "Avenir Next", Sawasdee, Helvetica, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 400;
 }
 
 button {
-    font-family: Quicksand, "Avenir Next", Sawasdee, Helvetica, sans-serif;
+    font-family: "Avenir Next", Sawasdee, Helvetica, sans-serif;
 }
 
 label {
