UI Improvements: Image manipulation for help page only

--- a/src/views/help-pages/edit-education.pug
+++ b/src/views/help-pages/edit-education.pug
@@ -5,10 +5,11 @@
     ![Education card](/images/help-pages/education-card.png)
     2. Click on "Add Education"
     3. Enter the required information
-        - Level of Education (Undergraduate, Graduate, High School, Technical/Vocational School, etc)
-        - Institution of Education (eg. Temple University)
+        - Level of Education
+        - Institution of Education
         - Start Date (Format: `mm/yyyy`)
-        - End Date (Format: `mm/yyyy` or leave blank if currently enrolled)
+        - End Date (Format: `mm/yyyy`)
+            - Leave blank if currently enrolled
     4. Enter a description if you want
 
     # Edit or Delete Education
