--- a/src/views/help.pug
+++ b/src/views/help.pug
@@ -11,14 +11,13 @@ html(lang='en-US')
     head
         include components/head
         style.
-            img {
+            .container img {
                 max-width: 100%;
-                background: black;
                 transition: 0.5s opacity;
                 opacity: 1;
             }
 
-            img:hover {
+            .container img:hover {
                 opacity: 0.5;
             }
     body
