UI Improvement: Added icons to help page

--- a/src/views/help.pug
+++ b/src/views/help.pug
@@ -30,7 +30,10 @@ html(lang='en-US')
                     hr
                 .row
                     .col-12.col-md-6.mb-4
-                        h3 Account Management
+                        h3
+                            .btn
+                                ion-icon.text-primary(name='finger-print-outline')
+                            | Account Management
                         ul.list-group
                             li.list-group-item
                                 a(href='?page=login-signup') Sign Up or Login
@@ -41,7 +44,10 @@ html(lang='en-US')
                             li.list-group-item
                                 a(href='?page=database-errors-explained') Database Errors Explained
                     .col-12.col-md-6.mb-4
-                        h3 Resume Information
+                        h3
+                            .btn
+                                ion-icon.text-primary(name='document-outline')
+                            | Resume Information
                         ul.list-group
                             li.list-group-item
                                 a(href='?page=edit-education') Add, Edit, or Delete Education
@@ -52,7 +58,10 @@ html(lang='en-US')
                             li.list-group-item
                                 a(href='?page=edit-skills') Add, Edit, or Delete Skills
                     .col-12.col-md-6.mb-4
-                        h3 Resume Strength
+                        h3
+                            .btn
+                                ion-icon.text-primary(name='barbell-outline')
+                            | Resume Strength
                         ul.list-group
                             li.list-group-item
                                 a(href='?page=resume-strength-meters') Resume Strength Meters
