--- a/src/views/account.pug
+++ b/src/views/account.pug
@@ -49,4 +49,5 @@ html(lang='en-US')
                         .col-12
                             button.btn.btn-primary(type='submit') Sign Up
 
+        include components/footer
         include components/scripts
