--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -112,5 +112,5 @@ html(lang='en-US')
                                                 ion-icon.p-1(name='document-outline')
                                         .col-11= suggestion.message
 
-
+        include components/footer
         include components/scripts
