--- a/src/views/help.pug
+++ b/src/views/help.pug
@@ -100,5 +100,5 @@ html(lang='en-US')
                             include help-pages/edit-education
                         default
                             h2 Could not find the help page you requested
-
+        include components/footer
         include components/scripts
