--- a/src/views/themes.pug
+++ b/src/views/themes.pug
@@ -22,5 +22,5 @@ html(lang='en-US')
                             a.btn.badge.bg-primary.rounded-pill Buy
                             a.btn.badge.bg-secondary.rounded-pill.ml-2(href='themes/preview?theme=budgie-blue') Preview
                             
-
+        include components/footer
         include components/scripts
