--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -114,3 +114,12 @@ blockquote p {
     height: 30px;
     border-radius: 10px;
 }
+
+.navbar {
+    position: sticky;
+    top: 0;
+    background: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
