--- a/src/views/components/navbar.pug
+++ b/src/views/components/navbar.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light
+nav.navbar.navbar-expand-lg.navbar-light
     .container-fluid
         a.navbar-brand(href='#')
             img.img-fluid.d-inline-block.align-top(
