--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -117,6 +117,7 @@ blockquote p {
 
 .navbar {
     position: sticky;
+    z-index: 100;
     top: 0;
     background: rgba(255, 255, 255, 0);
     backdrop-filter: blur(5px);
