--- a/src/views/components/navbar.pug
+++ b/src/views/components/navbar.pug
@@ -7,7 +7,8 @@ nav.navbar.navbar-expand-lg.navbar-light
                 width='30'
                 alt='Resumator Logo'
                 loading='lazy')
-            | &nbsp; Resumator     
+            | &nbsp; Resumator
+            span.ml-1.badge.bg-primary(style='font-size:0.6em;') Alpha
         button.navbar-toggler(type='button' data-toggle='collapse' data-target='#collapsing-navbar')
             span.navbar-toggler-icon
         #collapsing-navbar.collapse.navbar-collapse.ml-lg-4
