--- a/src/views/help-pages/edit-education.pug
+++ b/src/views/help-pages/edit-education.pug
@@ -1,3 +1,22 @@
+include ../components/dashboard/education
+
++add-education-modal()
+each education in educationHistory
+    +edit-education-modal(education)
+
+.row
+    .col-10.col-md-8
+        .alert.alert-success If you're a real lazy ass, you can do it right here:
+.row
+    .col-10.col-md-8
+        +education-card(educationHistory)
+    .col-2.col-md-4
+        .alert.alert-primary(style='margin-left:-60px;margin-top:10px') You can access this on your 
+            a(href='/app/dashboard#education-card') dashboard.
+.row
+    .col-12.p-4
+        hr
+
 :markdown-it
     # Add Education
 
