Changed "Resume strength" background

--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -43,7 +43,7 @@ html(lang='en-US')
                     +education-card(educationHistory)
                     +work-experience-card(workExperience)
                     +certifications-card(certifications)
-        .container-fluid.mt-4.text-dark.pt-4.pb-4(style='background:rgb(230, 230, 230)')
+        .container-fluid.mt-4.text-dark.pt-4.pb-4.bg-light
             .container
                 .row
                     .col-12
