--- a/src/views/help.pug
+++ b/src/views/help.pug
@@ -80,7 +80,7 @@ html(lang='en-US')
                                     a(href='/app/help')
                                         if ["login-signup", "modify-contact-info"].indexOf(helpPage) >= 0
                                             | Account Management
-                                        else if ["edit-education", "edit-work"].indexOf(helpPage) >= 0
+                                        else if ["edit-education", "edit-work", "edit-certifications"].indexOf(helpPage) >= 0
                                             | Resume Information
                                 .breadcrumb-item.active
                                     case helpPage
@@ -92,6 +92,8 @@ html(lang='en-US')
                                             | Add, Edit, or Delete Education
                                         when "edit-work"
                                             | Add, Edit, or Delete Work Experience
+                                        when "edit-certifications"
+                                            | Add, Edit, or Delete Certifications
                 .mt-4
                     case helpPage
                         when "login-signup"
@@ -102,6 +104,8 @@ html(lang='en-US')
                             include help-pages/edit-education
                         when "edit-work"
                             include help-pages/edit-work
+                        when "edit-certifications"
+                            include help-pages/edit-certifications
                         default
                             h2 Could not find the help page you requested
         include components/footer
